--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,3 +35,17 @@ code {
   font-weight: bold;
   text-transform: capitalize;
 }
+
+.input {
+  width: 150px;
+}
+
+.submit {
+  margin-top: 30px !important;
+  margin-left: 20px !important;
+}
+
+.error-text {
+  color: #B40404 !important;
+  text-align: center !important;
+}
